# NOSSO-MAR

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHASE_1_ROADMAP.md  PUSH_INSTRUCTIONS.md  README.md  THREADS_ARCHIVE.md  compare_remote.py  push_to_github.ps1  pyproject.toml  requirements.txt  setup.py  stats_compare.py
_archive/: Navier-Stokes.md  README_ARCHIVE.md  README_WORKSPACE.md  create_nosso_mar_full_repo (1).py  create_nosso_mar_full_repo.py  database.md
checkpoints/: deeponet_wec_local.json  deeponet_wec_metrics.json
configs/: leonardo.md  lhs_phase1.yaml  lumi.yaml  open_data.yaml  operator_sweep.yaml  training.yaml  viana_50_layout.json  viana_dataset.yaml
data/: phase1_wec_database.json  phase1_wec_database.metadata.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_ASSIMILATION.md  FAQ.md  GIT_GUIDE.md  HPC_GUIDE.md  PHASE_1_BASELINE.md  PHASE_1_EXECUTION_PLAN.md  PHASE_1_ROADMAP.md  PHASE_1_ROADMAP.mdPHASE_1_ROADMAP.md  ROADMAP.md
scripts/: build_open_database.py  generate_f1a_dataset.py  generate_phase1_dataset.py  prepare_viana_dataset.py  smoke_operator_sweep.py  train_phase1.py
specs/: 01_IO_CONTRACTS.md  02_DATA_STRATEGY.md  03_F1A_WSI_OPERATOR.md  04_F1B_WAVE_FIELD_OPERATOR.md  05_F1C_COUPLING.md  06_SCIENTIFIC_MODULES.md  07_UNCERTAINTY_ARCHITECTURE.md  08_DATASET_PIPELINE.md  09_TRAINING_LOOP.md  10_MULTIFIDELITY_ALIGNMENT.md  11_MATHEMATICAL_MODEL_FOUNDATIONS.md  12_PHYSICS_LOSS_LIBRARY.md  13_VALIDATION_DATASETS_BY_FIDELITY.md  14_EXTERNAL_DATA_INTEGRATION.md  15_BENCHMARK_COMPATIBILITY_RULES.md
tests/: conftest.py  (+9 more)
(+281 files in other folders)
