[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nossomar"
version = "0.1.0"
description = "Multi-fidelity neural-operator workspace for the NOSSO-MAR project."
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.4",
  "PyYAML>=6.0",
  "torch>=2.11",
  "scipy>=1.17",
  "xarray>=2026.4",
  "pandas>=3.0",
  "netCDF4>=1.7",
  "requests>=2.33",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
